Changelog
---------

Version 1.0b5 - December 15, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- View templates now support argument-passing for alternative context
  and request (for compatibility with
  ``zope.app.pagetemplate``). [malthe]

- Switched off the $-interpolation feature per default; It may be activated
  on a per-template basis using ``meta:interpolation='true'``. [seletz]

- Allow more flexibility in overriding the PathTranslator method. [hannosch]

- Removed the forced defaultencoding from the benchmark suite. [hannosch]

Version 1.0b4 - November 19, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Split out content provider function call to allow modification
  through subclassing. [malthe]

- Added language negotiation. [malthe]

- Simplified template class inheritance. [malthe]

- Added support for the question-mark operator in path-expressions. [malthe]

- Updated expressions to recent API changes. [malthe]

- Added 'exists' and 'not' translators. [malthe]

  Bug fixes

- Adjusted the bigtable benchmark test to API changes. [hannosch]

Version 1.0b3 - November 12, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added ``PageTemplate`` and ``PageTemplateFile`` classes. [malthe]

Version 1.0b2 - November 3, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  Bug fixes

- Allow '.' character in content provider expressions.

- Allow '+' character in path-expressions.

Version 1.0b1 - October 2, 2008
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  Package changes

- Split out compiler to "Chameleon" package. [malthe]

  Backwards incompatibilities

- Moved contents of ``z3c.pt.macro`` module into
  ``z3c.pt.template``. [malthe]

- Namespace attribute "xmlns" no longer rendered for templates with no
  explicit document type. [malthe]

- Changes to template method signatures. [malthe]

- Engine now expects all strings to be unicode or contain ASCII
  characters only, unless an encoding is provided. [malthe]

- The default path traverser no longer proxies objects. [malthe]
